# MPIImageArchitecture

./: CMakeLists.txt  SampleWorking.cpp  StaticImageProcessing.cpp  StaticImageProcessing.h  VideoProcessing.cpp  VideoProcessing.h  main.cpp
